Template updates to fix phpBB layout on small screens and remove second level of menu in collapsed navbar

--- a/joomla/ukrgb/less/body.less
+++ b/joomla/ukrgb/less/body.less
@@ -24,3 +24,7 @@ body {
 		padding-top: 10px;
 	}
 }
+
+.phpbb-layout{
+	min-width: 580px;
+}
