--- a/joomla/ukrgb/less/footer.less
+++ b/joomla/ukrgb/less/footer.less
@@ -6,10 +6,10 @@
 	#gradient > .vertical(@blue-lighter,@blue-darker);
 	padding-top: 15px;
 	padding-bottom: 15px;
-	padding-left: 20px;
 	
 	p {
 		margin-right: 30px;
+		margin-left: 20px;
 		color: @grayLighter;
 	}	
 	
